Conditionally set the nodeIP

--- a/roles/openshift_node/templates/node.yaml.v1.j2
+++ b/roles/openshift_node/templates/node.yaml.v1.j2
@@ -23,7 +23,9 @@ networkConfig:
 {% if openshift.common.use_openshift_sdn %}
    networkPluginName: {{ openshift.common.sdn_network_plugin_name }}
 {% endif %}
+{% if openshift.node.set_node_ip | bool %}
 nodeIP: {{ openshift.common.ip }}
+{% endif %}
 nodeName: {{ openshift.common.hostname | lower }}
 podManifestConfig:
 servingInfo:
