adhoc s3 registry - add auth part in the registry config sample
Without the auth part, after spawning the registry we were not able to do an auth.

```
docker login -u .. -p ...  172.30.234.98:5000
Error response from daemon: no successful auth challenge forhttp://172.30.234.98:5000/v2/ - errors: []
```

Simply adding this part in the registry config sample

--- a/playbooks/adhoc/s3_registry/s3_registry.j2
+++ b/playbooks/adhoc/s3_registry/s3_registry.j2
@@ -15,6 +15,9 @@ storage:
     secure: true
     v4auth: true
     rootdirectory: /registry
+auth:
+  openshift:
+    realm: openshift
 middleware:
   repository:
     - name: openshift
