--- a/roles/openshift_master/templates/master.yaml.v1.j2
+++ b/roles/openshift_master/templates/master.yaml.v1.j2
@@ -81,7 +81,7 @@ etcdStorageConfig:
   openShiftStorageVersion: v1
 imageConfig:
   format: {{ openshift.master.registry_url }}
-  latest: false
+  latest: {{ openshift.common.imageconfig_latest }}
 kind: MasterConfig
 kubeletClientInfo:
 {# TODO: allow user specified kubelet port #}
