disable http-server-close option

--- a/roles/haproxy/templates/haproxy.cfg.j2
+++ b/roles/haproxy/templates/haproxy.cfg.j2
@@ -20,7 +20,7 @@ defaults
     log                     global
     option                  httplog
     option                  dontlognull
-    option http-server-close
+#    option http-server-close
     option forwardfor       except 127.0.0.0/8
     option                  redispatch
     retries                 3
