--- a/playbooks/libvirt/openshift-cluster/templates/domain.xml
+++ b/playbooks/libvirt/openshift-cluster/templates/domain.xml
@@ -1,6 +1,6 @@
 <domain type='kvm' id='8'>
   <name>{{ item }}</name>
-  <memory unit='GiB'>1</memory>
+  <memory unit='MiB'>{{ os_libvirt_instance_memory_mib }}</memory>
   <metadata xmlns:ansible="https://github.com/ansible/ansible">
     <ansible:tags>
       <ansible:tag>environment-{{ cluster_env }}</ansible:tag>
@@ -9,8 +9,7 @@
       <ansible:tag>sub-host-type-{{ g_sub_host_type }}</ansible:tag>
     </ansible:tags>
   </metadata>
-  <currentMemory unit='GiB'>1</currentMemory>
-  <vcpu placement='static'>2</vcpu>
+  <vcpu placement='static'>{{ os_libvirt_instance_vcpu }}</vcpu>
   <os>
     <type arch='x86_64' machine='pc'>hvm</type>
     <boot dev='hd'/>
@@ -35,10 +34,15 @@
       <source file='{{ os_libvirt_storage_pool_path }}/{{ item }}.qcow2'/>
       <target dev='vda' bus='virtio'/>
     </disk>
+    <disk type='file' device='disk'>
+      <driver name='qemu' type='qcow2'/>
+      <source file='{{ os_libvirt_storage_pool_path }}/{{ item }}-docker.qcow2'/>
+      <target dev='vdb' bus='virtio'/>
+    </disk>
     <disk type='file' device='cdrom'>
       <driver name='qemu' type='raw'/>
       <source file='{{ os_libvirt_storage_pool_path }}/{{ item }}_cloud-init.iso'/>
-      <target dev='vdb' bus='virtio'/>
+      <target dev='vdc' bus='virtio'/>
       <readonly/>
     </disk>
     <controller type='usb' index='0' />
