--- a/roles/openshift_master/templates/native-cluster/atomic-openshift-master-api.service.j2
+++ b/roles/openshift_master/templates/native-cluster/atomic-openshift-master-api.service.j2
@@ -1,10 +1,10 @@
 [Unit]
 Description=Atomic OpenShift Master API
 Documentation=https://github.com/openshift/origin
-After=network.target
+After=network-online.target
 After=etcd.service
 Before={{ openshift.common.service_type }}-node.service
-Requires=network.target
+Requires=network-online.target
 
 [Service]
 Type=notify
