--- a/roles/openshift_master/templates/master.yaml.v1.j2
+++ b/roles/openshift_master/templates/master.yaml.v1.j2
@@ -89,6 +89,9 @@ etcdStorageConfig:
 imageConfig:
   format: {{ openshift.master.registry_url }}
   latest: false
+{% if 'image_policy_config' in openshift.master %}
+imagePolicyConfig:{{ openshift.master.image_policy_config | to_padded_yaml(level=1) }}
+{% endif %}
 kind: MasterConfig
 kubeletClientInfo:
 {# TODO: allow user specified kubelet port #}
