Access portal_net in common facts.

--- a/roles/openshift_master/templates/atomic-openshift-master.j2
+++ b/roles/openshift_master/templates/atomic-openshift-master.j2
@@ -14,7 +14,7 @@ AWS_SECRET_ACCESS_KEY={{ openshift.cloudprovider.aws.secret_key }}
 {% if 'http_proxy' in openshift.common or 'https_proxy' in openshift.common %}
 HTTP_PROXY='{{ openshift.common.http_proxy | default('') }}'
 HTTPS_PROXY='{{ openshift.common.https_proxy | default('')}}'
-NO_PROXY='{{ openshift.common.no_proxy | default('') | join(',') }},{{ openshift.master.portal_net }},{{ openshift.master.sdn_cluster_network_cidr }}'
+NO_PROXY='{{ openshift.common.no_proxy | default('') | join(',') }},{{ openshift.common.portal_net }},{{ openshift.master.sdn_cluster_network_cidr }}'
 {% else %}
 #HTTP_PROXY=http://user:pass@proxy.example.com
 #HTTPS_PROXY=http://user:pass@proxy.example.com
