[hack] disable pull-through for registry

--- a/roles/openshift_hosted/templates/registry_config.j2
+++ b/roles/openshift_hosted/templates/registry_config.j2
@@ -59,6 +59,8 @@ auth:
 middleware:
   repository:
   - name: openshift
+    options:
+      pullthrough: false
 {% if openshift.hosted.registry.storage.provider == 's3' and 'cloudfront' in openshift.hosted.registry.storage.s3 %}
   storage:
   - name: cloudfront
