Fix padding on registry config

--- a/roles/openshift_hosted/templates/registry_config.j2
+++ b/roles/openshift_hosted/templates/registry_config.j2
@@ -61,7 +61,7 @@ middleware:
 {% if openshift.common.version_gte_3_3_or_1_3 | bool %}
   registry:
   - name: openshift
-{% endif -%}
+{% endif %}
   repository:
   - name: openshift
     options:
